--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,3 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap");
+html {
+  scroll-behavior: smooth;
+}
